--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="styleheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+       <div class="passo" id="passo-0">
+        <img src="" alt="">
+        <p>O nome dele era Kael. Ele não nasceu nobre, nem tinha sangue de dragão correndo nas veias. Ele era apenas o filho de um ferreiro
+           de uma vila remota, mas o seu destino estava traçado nas cicatrizes que colecionava. Desde cedo, Kael aprendeu que a força não
+           vinha apenas de uma espada afiada, mas da resiliência de um coração que se recusa a desistir</p>
+        <button>Caminho 1: O Mestre da Forja</button>    
+        <button>Caminho 2: O Peregrino das Estrelas</button>
+       </div>
+    </main>
 </body>
-</html>
+</html>    
+
+
+
